--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -11,18 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-        android:text="@string/please_choose_your_wish"
+        android:text="@string/choose_option"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@id/button_available_networks"
+        app:layout_constraintBottom_toTopOf="@id/button_current_network"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_available_networks"
+        android:id="@+id/button_current_network"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/available_networks"
+        android:text="@string/current_network"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
