improve the main page text

--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-        android:text="@string/choose_option"
-        android:textSize="25sp"
+        android:text="@string/welcome_to_mntr"
+        android:gravity="center"
+        android:textColor="@color/purple_700"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/button_current_network"
         app:layout_constraintEnd_toEndOf="parent"
